libs/image/kis_wrapped_random_accessor.h
@@ -29,6 +29,7 @@ public:
                              qint32 x, qint32 y,
                              qint32 offsetX, qint32 offsetY,
                              bool writable,
+                             KisIteratorCompleteListener *completeListener,
                              const QRect &wrapRect);
 
     void moveTo(qint32 x, qint32 y);
